--- a/congrats.html
+++ b/congrats.html
@@ -12,7 +12,7 @@
     <div style="display: flex; justify-content: center; flex-direction: column">
       <p style="font-size: 28px; text-align: center">
         🥳축하합니다!🥳<br /><br />
-        n번만에 맞히셨네요.<br /><br />
+        <span id="count"></span>번만에 맞히셨네요.<br /><br />
         게임을 종료합니다<br />
       </p>
       <button
@@ -22,6 +22,12 @@
         게임 재시작
       </button>
     </div>
-    <script src="check.js"></script>
+    <script>
+      const attemp = localStorage.getItem('attemp');
+      console.log(attemp);
+      const countSpan = document.getElementById('count');
+    
+      countSpan.innerHTML= attemp;
+    </script>=]
   </body>
 </html>
