--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
       <button id="button" onclick="ballStrikeCheck()">확인</button>
       <div id="record"></div>
     </form>
-    <script src="index.js"></script>
+    <script src="check.js"></script>
   </body>
 </html>
