필요없는 텍스트 제거

--- a/congrats.html
+++ b/congrats.html
@@ -23,11 +23,10 @@
       </button>
     </div>
     <script>
-      const attemp = localStorage.getItem('attemp');
+      const attemp = localStorage.getItem("attemp");
       console.log(attemp);
-      const countSpan = document.getElementById('count');
-    
-      countSpan.innerHTML= attemp;
-    </script>=]
+      const countSpan = document.getElementById("count");
+      countSpan.innerHTML = attemp;
+    </script>
   </body>
 </html>
